--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - main
       - master
-      - '**'   # 这样所有分支 push 都会触发
+      - '**'   # 所有分支 push 都触发
 
 jobs:
   build-apk:
@@ -20,4 +20,28 @@ jobs:
       with:
         python-version: '3.10'
 
-    
+    - name: Install dependencies
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y python3-pip git zip unzip openjdk-17-jdk
+        pip install --upgrade pip
+        pip install buildozer cython==0.29.36
+
+    - name: Initialize buildozer.spec if missing
+      run: |
+        if [ ! -f buildozer.spec ]; then
+          buildozer init
+        fi
+
+    - name: Build APK
+      run: |
+        buildozer android debug
+
+    - name: List APK files
+      run: ls -l bin/
+
+    - name: Upload APK artifact
+      uses: actions/upload-artifact@v3
+      with:
+        name: app-debug-apk
+        path: bin/*.apk
