--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -45,7 +45,27 @@ jobs:
           libportmidi-dev \
           libswscale-dev \
           libavformat-dev \
-          libavcodec-dev
+          libavcodec-dev \
+          wget unzip openjdk-17-jdk
+
+    - name: Install Android SDK command line tools
+      run: |
+        mkdir -p $HOME/android-sdk/cmdline-tools
+        cd $HOME/android-sdk/cmdline-tools
+        wget https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip -O cmdline-tools.zip
+        unzip cmdline-tools.zip
+        rm cmdline-tools.zip
+        mv cmdline-tools latest
+
+    - name: Set Android environment variables
+      run: |
+        echo "ANDROID_SDK_ROOT=$HOME/android-sdk" >> $GITHUB_ENV
+        echo "PATH=$PATH:$HOME/android-sdk/cmdline-tools/latest/bin:$HOME/android-sdk/platform-tools:$HOME/android-sdk/build-tools/33.0.0" >> $GITHUB_ENV
+
+    - name: Accept licenses and install SDK Build Tools
+      run: |
+        yes | $HOME/android-sdk/cmdline-tools/latest/bin/sdkmanager --sdk_root=$HOME/android-sdk --licenses
+        $HOME/android-sdk/cmdline-tools/latest/bin/sdkmanager --sdk_root=$HOME/android-sdk "platform-tools" "platforms;android-33" "build-tools;33.0.0"
 
     - name: Install buildozer and cython
       run: |
